Fix z-index stacking

--- a/client/style/main.scss
+++ b/client/style/main.scss
@@ -3,6 +3,7 @@ body {
 }
 
 .overlay {
+  position: relative;
   width: 100vw;
   height: 100vh;
 
